Rezolvare a doua parte din tema Linux-Podman

--- a/lab/playground/containers/index.html
+++ b/lab/playground/containers/index.html
@@ -77,7 +77,7 @@ function changeCookie() {
 </script>
 </head>
 <body onload="checkRefresh();" style="background-color:grey;">
-<img alt="NGINX Logo" src="/images/image.png"/>
+<img alt="NGINX Logo" src="image.png"/>
 <div class="info">
 <p><span>Server&nbsp;address:</span> <span>server_address</span></p>
 <p><span>Server&nbsp;name:</span> <span>server_hostname</span></p>
